--- a/lesson1/classwork/src/App.css
+++ b/lesson1/classwork/src/App.css
@@ -22,3 +22,9 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.Inline {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
