--- a/lesson2/classwork/src/components/button/Button.css
+++ b/lesson2/classwork/src/components/button/Button.css
@@ -5,7 +5,7 @@
     padding: 14px 28px;
     font-size: 16px;
     cursor: pointer;
-    width: 120px;
+    /*width: 120px;*/
     margin: 0 5px;
 }
 
