--- a/lesson2/calculator/src/components/input/Input.css
+++ b/lesson2/calculator/src/components/input/Input.css
@@ -1,27 +1,33 @@
 .window {
     background-color: white;
     border: solid 1px black;
-    /*text-align: center;*/
-    width: 88%;
-    margin-top: 30px;
-    height: 80px;
+    width: 90%;
+    height: 50px;
     display: inline-flex;
     align-self: flex-end;
     flex-direction: row;
 }
+
+.window:not(:first-child) {
+    border-top: none;
+}
+
+.window:not(:last-child) {
+    margin-top: 30px;
+    border-bottom: none;
+}
+
+
 .memory {
     text-align: center;
     flex: 1;
-    align-self: flex-end;
     padding-left: 5px;
 }
 .input {
     text-align: right;
     flex: 9;
-    align-self: flex-end;
 }
 .act {
     text-align: center;
     flex: 1;
-    align-self: flex-end;
 }
